Fix : Css padding between scrollbar and card elements

--- a/src/components/containers/icons-display-container/icons-display-container.module.css
+++ b/src/components/containers/icons-display-container/icons-display-container.module.css
@@ -1,3 +1,8 @@
+.overflowContainer {
+  height: 100%;
+  overflow: scroll;
+  overflow-x: hidden;
+}
 .container {
   column-gap: 16px;
   display: grid;
@@ -16,17 +21,16 @@
     )
   );
   height: 100%;
-  overflow: scroll;
-  overflow-x: hidden;
   row-gap: 22px;
+  padding-right: 5px;
   width: 100%;
 }
 /* scroll bar width */
-.container::-webkit-scrollbar {
+.overflowContainer::-webkit-scrollbar {
   width: 3px;
 }
 /* Handle */
-.container::-webkit-scrollbar-thumb {
+.overflowContainer::-webkit-scrollbar-thumb {
   border: 3px solid var(--app-scroll-thumb-light);
 }
 .smallList {
